# bfcc

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  aaaaaaa.bf  bal.js  bfcc.rs  call_args.ll  calls.bc  calls.c  calls.ll  checkedcc.c  cli.rs  eq.bf  example.bc  example.c  explore  explore.c  flake.nix  futch  hello.c  hmm.bf  hmm.ll  hmm2.ll  lt.bf  main.rs  out.ll  run_tests  run_tests.rs  shell.nix  simpc  stdfuck.h  verify.rs
.semaphore/: semaphore.yml
debug/: main.rs
exec/: main.rs
tests/: add_and_print.bc  add_and_print.bf  add_and_print.c  add_and_print.ll  add_const.bc  add_const.bf  add_const.c  add_const.ll  add_two_consts.bc  count_from_9.bf  count_from_9.c  count_from_9.ll  count_to_ten.bc  count_to_ten.bf  count_to_ten.c  echo_until_eof.bf  echo_until_eof.c  func_call.bf  hello_world.bc  hello_world.bf  if.bc  if.bf  if.c  if_elif_else.bf  if_elif_else.c  import_from_c_testsuite  multiply.bc  plus_equals.bc  plus_equals.bf  plus_equals.c  pointer.bf  pointer.c  pointer_load.bf  print_fib.bf  recursive_call.c  stdfuck.h  subtract_and_print.bc  subtract_and_print.bf  subtract_and_print.c  subtract_const.bc  (+4 more)
tests/basic_ops/: add_and_print.c.bf  add_const.c.bf  count_from_9.c.bf  func_call.c  func_call.c.bf  pointer_load.c  recursive_call.c.bf
tests/bf/: add_and_print.c.bf  add_and_print.c.o0.bf  add_and_print.c.o1.bf  add_const.c.bf  add_const.c.o0.bf  bitwise.c.bf  (+82 more)
tests_old/: add_and_print.bf  add_const.c  hello_world.c  if.bf  plus_equals.bf  plus_equals.c  print_fib.c  subtract_and_print.bf  subtract_and_print.c  subtract_const.c  while.bf
(+776 files in other folders)
