[package]
name = "bfcc"
version = "0.1.0"
authors = ["Mason Clayton <masongclayton@gmail.com>"]

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm3-7" }
ncurses = "5.99.0"

[patch."https://github.com/TheDan64/inkwell"]
inkwell = { path = "./vendor/inkwell" }

[[bin]]
name = "bfcc"
path = "main.rs"

[[bin]]
name = "bfexec"
path = "exec/main.rs"

[[bin]]
name = "bfdb"
path = "debug/main.rs"
